--- a/Atiendeme/assets/css/shared.css
+++ b/Atiendeme/assets/css/shared.css
@@ -569,128 +569,148 @@ input[type="checkbox"]:checked::before {
     color: #5bc0de;
 }
 
+
 /* Footer section */
 
-.ct-us{
-  margin: 0;
-  padding: 0;
-  color: #d9d9d9;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+.ct-us {
+    margin: 0;
+    padding: 0;
+    color: #d9d9d9;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.content1{
-  position: relative;
-  margin: 130px auto;
-  text-align: center;
-  padding: 0 20px;
-}
-.content1 .text{
-  font-size: 2.5rem;
-  font-weight: 600;
-  color: #202020;
-}
-.content1 .p{
-  font-size: 2.1875rem;
-  font-weight: 600;
-  color: #202020;
+.content1 {
+    position: relative;
+    margin: 130px auto;
+    text-align: center;
+    padding: 0 20px;
 }
 
-footer{
-  position: relative;
-  bottom: 0px;
-  width: 100%;
-  background: #111;
-}
-.main-content{
-  display: flex;
-}
-.main-content .box{
-  flex-basis: 50%;
-  padding: 10px 20px;
-}
-.box h2{
-  font-size: 1.125rem;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-.box .content{
-  margin: 20px 0 0 0;
-  position: relative;
-}
-.box .content:before{
-  position: absolute;
-  content: '';
-  top: -10px;
-  height: 2px;
-  width: 100%;
-  background: #1a1a1a;
-}
-.box .content:after{
-  position: absolute;
-  content: '';
-  height: 2px;
-  width: 15%;
-  background: #85f8e0;
-  top: -10px;
+.content1 .text {
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #202020;
 }
 
-.left .content p{
-  text-align: justify;
+.content1 .p {
+    font-size: 2.1875rem;
+    font-weight: 600;
+    color: #202020;
 }
 
-.left .content .social{
-  margin: 20px 0 0 0;
+footer {
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    background: #111;
 }
 
-.left .content .social a{
-  padding: 0 2px;
+.main-content {
+    display: flex;
 }
 
-.left .content .social a span{
-  height: 40px;
-  width: 40px;
-  background: #1a1a1a;
-  line-height: 40px;
-  text-align: center;
-  font-size: 18px;
-  border-radius: 5px;
-  transition: 0.3s;
+.main-content .box {
+    flex-basis: 50%;
+    padding: 10px 20px;
 }
 
-.right .content .fas{
-  font-size: 1.4375rem;
-  background: #1a1a1a;
-  height: 45px;
-  width: 45px;
-  line-height: 45px;
-  text-align: center;
-  border-radius: 50%;
-  transition: 0.3s;
-  cursor: pointer;
+.box h2 {
+    font-size: 1.125rem;
+    font-weight: 600;
+    text-transform: uppercase;
 }
-.right .content .fas:hover{
-  background:#85f8e0;
+
+.box .content {
+    margin: 20px 0 0 0;
+    position: relative;
 }
-.right .content .text{
-  font-size: 1.0625rem;
-  font-weight: 500;
-  padding-left: 10px;
+
+.box .content:before {
+    position: absolute;
+    content: '';
+    top: -10px;
+    height: 2px;
+    width: 100%;
+    background: #1a1a1a;
 }
-.right .content .phone{
-  margin: 15px 0;
+
+.box .content:after {
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 15%;
+    background: #85f8e0;
+    top: -10px;
+}
+
+.left .content p {
+    text-align: justify;
+}
+
+.left .content .social {
+    margin: 20px 0 0 0;
+}
+
+.left .content .social a {
+    padding: 0 2px;
+}
+
+.left .content .social a span {
+    height: 40px;
+    width: 40px;
+    background: #1a1a1a;
+    line-height: 40px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.right .content .fas {
+    font-size: 1.4375rem;
+    background: #1a1a1a;
+    height: 45px;
+    width: 45px;
+    line-height: 45px;
+    text-align: center;
+    border-radius: 50%;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.right .content .fas:hover {
+    background: #85f8e0;
+}
+
+.right .content .text {
+    font-size: 1.0625rem;
+    font-weight: 500;
+    padding-left: 10px;
+}
+
+.right .content .phone {
+    margin: 15px 0;
 }
 
 @media screen and (max-width: 900px) {
-  footer{
-    position: relative;
-    bottom: 0px;
-  }
-  .main-content{
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-  .main-content .box{
-    margin: 5px 0;
-  }
+    footer {
+        position: relative;
+        bottom: 0px;
+    }
+    .main-content {
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .main-content .box {
+        margin: 5px 0;
+    }
+}
+
+.icon-fontawesome-service {
+    font-size: 100px
+}
+
+.padding-top-20 {
+    padding-top: 20px
 }
